--- a/MEMBANGUN KEPRIBADIAN PRESTASI TINGGI YANG ABADI/motif.html
+++ b/MEMBANGUN KEPRIBADIAN PRESTASI TINGGI YANG ABADI/motif.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		
-		<script src="../libku/js/gl-matrix.js"></script>
-		<script src="../libku/js/rumus.js"></script>
+		<script src="https://angkasamuhammad.github.io/TandakurungNode/libku/js/gl-matrix.js"></script>
+		<script src="https://angkasamuhammad.github.io/TandakurungNode/libku/js/rumus.js"></script>
 		<script src="motif.js"></script>
 	</body>
 </html>
